<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/get_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingTop="12dp"
            android:text="@string/coveris"/>
        <EditText
            android:id="@+id/set_cover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="new cover"
            android:inputType="number"
            android:layout_below="@+id/get_cover"/>
        <TextView
            android:id="@+id/get_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coverdateis"
            android:layout_below="@+id/set_cover"/>
        <EditText
            android:id="@+id/set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="new date"
            android:inputType="date"
            android:layout_below="@+id/get_date"/>



        <LinearLayout
            android:id="@+id/layout_submit_cover"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_date"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:weightSum="2" >

            <Button
                android:id="@+id/button_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/update" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>